--- a/res/layout/activity_image.xml
+++ b/res/layout/activity_image.xml
@@ -10,5 +10,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/hello_world"/>
+    <TextView android:id="@+id/saved_path"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"/>
 
 </RelativeLayout>
